testdata/baselines/reference/submodule/conformance/instantiateTemplateTagTypeParameterOnVariableStatement.errors.txt
instantiateTemplateTagTypeParameterOnVariableStatement.js(6,12): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== instantiateTemplateTagTypeParameterOnVariableStatement.js (1 errors) ====
    /**
     * @template T
     * @param {T} a
     * @returns {(b: T) => T}
     */
    const seq = a => b => b;
               ~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    const text1 = "hello";
    const text2 = "world";
    
    /** @type {string} */
    var text3 = seq(text1)(text2);
    